--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.2.2
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/QR_Code.jpg"
+flutter_native_splash:
+  color: "#2e2e2e"
+  image: images/splash_screen.png
+  android: true
+  ios: true
+  android_gravity: center
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -47,8 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
